--- a/templates/chat.html
+++ b/templates/chat.html
@@ -2,7 +2,7 @@
 <style>
 </style>
 {% endblock %} {% block body %}
-功能开发中，敬请期待！
+功能持续更新上线中，敬请期待！
 <script>
 $(document).ready(function() {
 	$('.menu-wrap a').removeClass('active');
