--- a/templates/layout.html
+++ b/templates/layout.html
@@ -99,6 +99,7 @@
         background-color: #252732;
         padding: 30px;
         font-size: 15px;
+        position: relative;
     }
     
     #footer p {
@@ -425,6 +426,11 @@
         <p>Copyright <span class="fa fa-fw fa-copyright"></span> 第二届拍拍贷魔镜杯
             <br/> <span style="font-size:13px;color:#888;">数据应用大赛</span></p>
         <p style="font-size:13px;margin-top:5px;color:#ccc">已有<span style="color:#d94e5d;margin-left:10px;margin-right:10px;">{{ auth['count'] }}</span>名用户授权登陆</p>
+        <div style="position:absolute;right:45px;bottom:30px;">
+            <p style="font-size:12px;color:#999;text-align:right;line-height:2;">
+                推荐使用 Chrome Safari 等浏览器访问<br/>功能建议 问题反馈<br/>请联系微信 <a href="http://zhanghonglun.cn" target="_blank" style="color:#d94e5d;text-decoration:underline;">Honlann</a>
+            </p>
+        </div>
     </div>
 </body>
 <script>
